# claude-code-telegram

./: .env.example  .gitignore  AGENTS.md  AURA-apiKey-192795.csv  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MISSION.md  Makefile  README.md  SECURITY.md  TYPOGRAPHY.md  comfyui_flux_workflow.json  docker-compose.yml  install.sh  launch_aura_ui.command  memory.py  proactive_loop.py  pyproject.toml  test_api_integration.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
aura/: __init__.py  self_repair.py
config/: aura-mcp-only.json  com.aura.bot.plist
content/newsletters/: abril_2026.html  abril_2026.md  abril_2026.txt
content/social-media/: editorial-mayo-2026.json  editorial-mayo-2026.md
dashboard/: index.html  login.html
docs/: SDK_DUPLICATION_REVIEW.md  configuration.md  development.md  n8n_social_workflow.md  setup.md  tools.md
menubar/: aura_bar.py  com.aura.menubar.plist  install.sh
n8n/: config.json
n8n/flows/: instagram-post.json
scripts/: export_chat_history.py  rud_server_setup.sh  setup-node.sh
src/: main.py
src/actions/: __init__.py  registry.py  tool_cache.py  tool_selector.py
src/agents/: activity.py  factory.py  squad.py  team.py
src/api/: api.py  api_handler.py  api_tests.py  mesh_state.py  server.py
src/bot/: core.py  flood_guard.py  orchestrator.py  orchestrator_commands.py  orchestrator_media.py  orchestrator_routing.py  orchestrator_utils.py
src/brains/: __init__.py  api_brain.py  autonomous_brain.py  base.py  brain_health.py  claude_brain.py  conductor.py  cortex.py  executor_brain.py  exponential_backoff.py  gemini_brain.py  image_brain.py  local_ollama_brain.py  memory.py  ollama_brain.py  ollama_rud_brain.py  openrouter_brain.py  perplexity_brain.py  plot_data.py  proactive_loop.py  qwen_brain.py  router.py  video_brain.py
src/claude/: __init__.py  exceptions.py  facade.py  integration.py  meta_router.py  monitor.py  sdk_integration.py  session.py
src/config/: features.py  loader.py  settings.py
src/context/: __init__.py  aura_context.py  fact_extractor.py  mem0_memory.py  mempalace_memory.py
src/dashboard/: __init__.py  app.py  index.html
src/economy/: __init__.py  cache.py  intent.py  semantic_intent.py
src/events/: bus.py  types.py
src/infra/: __init__.py  auto_executor.py  com.aura.bot.plist  conductor.py  conductor_history.py  conductor_learnings.py  error_pattern_detector.py  fetch_data.py  fleet.py  launch_agent.py  memory.py  mesh_broadcaster.py  mesh_loop.py  meta_context.py  obsidian_sync.py  proactive_loop.py  rate_monitor.py  repair_manager.py  sandbox.py  self_healer.py  supernodes.py  task_journal.py  task_router.py  task_store.py  telegram_polling_repair.py  tunnel.py  utils.py  watchdog.py
src/integrations/: comfyui_client.py  gmail_client.py  google_auth.py  ionos_email_client.py  publication_db.py
src/mcp/: aura_server.py  cli_registrar.py
src/notifications/: service.py
src/observability/: __init__.py  tracer.py
src/projects/: registry.py  (+1 more)
(+161 files in other folders)
