[project]
name = "aura-agent"
version = "0.10.0"
description = "AURA — Personal AI Agent System. Multi-brain orchestration (Claude + Codex + Gemini) via Telegram."
readme = "README.md"
license = "MIT"
authors = [
    {name = "RUD Agency", email = "hello@rud-web.vercel.app"},
]
keywords = ["telegram", "bot", "claude", "ai", "multi-brain", "agent", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "rumps>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/royaluniondesign-sys/aura"
Repository = "https://github.com/royaluniondesign-sys/aura"
Documentation = "https://github.com/royaluniondesign-sys/aura/blob/main/docs/"

[project.scripts]
aura = "src.main:run"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {version = "^22.6", extras = ["rate-limiter"]}
structlog = "^25.4.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.0.0"
aiofiles = "^24.1.0"
aiosqlite = "^0.21.0"
anthropic = "^0.40.0"
claude-agent-sdk = "^0.1.39"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
apscheduler = "^3.10"
PyYAML = "^6.0.2"
requests = "^2.32.0"
backoff = "^2.2.1"
langfuse = {version = "^2.0.0", optional = true}
mistralai = {version = "^1.0.0", optional = true}
openai = {version = "^1.0.0", optional = true}
edge-tts = {version = "^7.0.0", optional = true}
faster-whisper = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
observability = ["langfuse"]
voice = ["mistralai", "openai"]
aura-voice = ["edge-tts", "faster-whisper"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
autoflake = "^2.3.2"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
